# pali-nlp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/pali_nlp/: __init__.py
src/pali_nlp/analysis/: frequency.py  graded_reader.py
src/pali_nlp/dpd/: lemmatizer.py
src/pali_nlp/ingestion/: vault_reader.py
src/pali_nlp/scripts/: build_vocab.py  grade_suttas.py  write_srs_cards.py  write_vocab_tables.py
src/pali_nlp/writer/: vault_writer.py
tests/: test_ingestion.py  test_lemmatizer.py  test_srs_cli.py  test_writer.py
