[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pali-nlp"
version = "0.1.0"
description = "NLP companion for the pali-canon Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
pali-grade    = "pali_nlp.scripts.grade_suttas:main"
pali-vocab    = "pali_nlp.scripts.build_vocab:main"
pali-write    = "pali_nlp.scripts.write_vocab_tables:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pali_nlp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
